fixed spacing issues

--- a/WebProject1/main.css
+++ b/WebProject1/main.css
@@ -12,12 +12,13 @@ outline:none;
 background-color:black;
 }
 .banner{
-position: relative;
-height :100px;
-font-size: 50;
+position:relative ;
+margin-top:0;
+font-size: 50px;
 font-family:times;
 text-align: center;
-top:45%;
+top:50%;
+width:100%;
 
 }
 .block{
@@ -71,10 +72,10 @@ background:url(http://huskfoods.com/wp-content/uploads/2013/11/earth.jpg);
 
 .buttons{
 
-position:relative;
+position:absolute;
 left:48%;
 bottom:25px;
-
+height:100%;
 
 
 }
